# checkbook-helper

./: Makefile  README.md  checkbook_calculator.py  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/checkbook_helper/: __init__.py  __main__.py  backend.py  gui.py
tests/: test_backend.py  test_gui.py
