[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "checkbook-helper"
version = "0.1.0"
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = "--cov=checkbook_helper --cov-report=term-missing --cov-report=xml"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["checkbook_helper"]
